k8s-security-website/network-policies/allow-from-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-same-namespace
  namespace: dev-team
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector: {}
